// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should navifation correctly 1`] = `
"<view class=\\"nut-grid nut-grid--border\\">
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--center nut-grid-item__content--clickable\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;

exports[`should render default slot correctly 1`] = `
"<view class=\\"nut-grid nut-grid--border\\">
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--center\\">Default Slot<view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;

exports[`should render gutter correctly 1`] = `
"<view class=\\"nut-grid\\" style=\\"padding-left: 20px;\\">
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 25%; padding-right: 20px; margin-top: 20px;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--surround nut-grid-item__content--center\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;

exports[`should render square correctly 1`] = `
"<view class=\\"nut-grid nut-grid--border\\">
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--center nut-grid-item__content--square\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--center nut-grid-item__content--square\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--center nut-grid-item__content--square\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
  <view class=\\"nut-grid-item\\" style=\\"flex-basis: 50%; padding-top: 50%;\\">
    <view class=\\"nut-grid-item__content nut-grid-item__content--border nut-grid-item__content--center nut-grid-item__content--square\\">
      <view class=\\"nut-grid-item__text\\"></view>
    </view>
  </view>
</view>"
`;
